# databend-udf

./: .gitignore  README.md
.github/workflows/: pr.yml  python.yml
python/: .gitignore  Pipfile  README.md  README_CLIENT.md  pyproject.toml
python/databend_udf/: __init__.py  client.py  udf.py
python/example/: http_client.py  server.py
python/tests/: README.md  __init__.py  conftest.py  pytest.ini  test_cancellation.py  test_comprehensive_example.py  test_connectivity.py  test_demo_server.py  test_max_concurrency.py  test_server.py  test_simple_udf.py  test_sql_generation.py  test_stage.py  test_stage_integration.py  test_stage_location.py  test_table_function_helpers.py  test_types.py  test_udf.py  test_vector_type.py
python/tests/servers/: __init__.py  basic_server.py  cancellation_server.py  comprehensive_server.py  concurrency_server.py  demo_server.py  minimal_server.py  stage_server.py  types_server.py
