[project]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
description = "Databend UDF Server"
license = { text = "Apache-2.0" }
name = "databend-udf"
version = "0.2.6"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pyarrow",
    "prometheus-client>=0.17.0",
    "fastapi>=0.103.2",
    "uvicorn>=0.22.0",
]

[dev-dependencies]
requests = ">=2.31.0"

[project.optional-dependencies]
lint = ["ruff"]

[project.urls]
Repository = "https://github.com/datafuselabs/databend-udf"
Homepage = "https://databend.rs"
