[project]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
description = "Databend UDF Server"
license = { text = "Apache-2.0" }
name = "databend-udf"
version = "0.2.17"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pyarrow",
    "prometheus-client>=0.17.0"
]
[project.optional-dependencies]
lint = ["ruff"]
test = ["pytest"]

[project.urls]
Repository = "https://github.com/databendlabs/databend-udf"
Homepage = "https://databend.com"
